<resources>
    <string name="app_name">CasinhaV2</string>
    <string name="btn1">Procurar</string>
    <string name="btn2">Conectar</string>
    <string name="gaic">Grupo de Automação Industrial e Controle </string>
    <string name="title_activity_menu_principal">MenuPrincipalActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="modulo">Módulo da Casinha</string>
    <string name="conta">Conta de Luz</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_menu_inicial">MenuInicial</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- Strings used for Comodos -->
    <string name="comodo1">1- Lavanderia</string>
    <string name="comodo2">2- Quarto de Solteiro</string>
    <string name="comodo3">3- Quarto de Casal</string>
    <string name="comodo4">4- Banheiro 1º Andar</string>
    <string name="comodo5">5- Sala de Estar</string>
    <string name="comodo6">6- Escritório</string>
    <string name="comodo7">7- Cozinha</string>
    <string name="comodo8">8- Banheiro 2º Andar</string>
    <string name="lav0">Ferro Elétrico</string>
    <string name="lamp">Lâmpada</string>
    <string name="lav2">Secadora</string>
    <string name="lav3">Maquina de Lavar Roupa</string>
    <string name="lav4">Aspirador de Pó</string>
    <string name="quars1">Cabeceira</string>
    <string name="quars2">Videogame</string>
    <string name="quars3">Estante</string>
    <string name="quars4">Ar Condicionado</string>
    <string name="quars5">TV</string>
    <string name="quars6">Lâmpada</string>
    <string name="qc1">Abajur</string>
    <string name="qc2">Cabeceira</string>
    <string name="qc3">Lampada</string>
    <string name="qc4">TV</string>
    <string name="qc5">Ar Condicionado</string>
    <string name="bp1">Lâmpada</string>
    <string name="bp2">Espelho</string>
    <string name="bp3">Torneira</string>
    <string name="bp4">Chapinha</string>
    <string name="bp5">Secador</string>
    <string name="bp6">Chuveiro</string>
    <string name="bp7">Aquecedor</string>
    <string name="se1">Home Theater</string>
    <string name="se2">Luminária</string>
    <string name="se3">TV</string>
    <string name="se4">Lâmpadas</string>
    <string name="se5">Ar Condicionado</string>
    <string name="es1">Roteador</string>
    <string name="es2">Abajur</string>
    <string name="es3">Impressora</string>
    <string name="es4">Notebook</string>
    <string name="es5">Lâmpada</string>
    <string name="es6">Ar Condicionado</string>
    <string name="coz1">Forno</string>
    <string name="coz2">Armário</string>
    <string name="coz3">Chaleira</string>
    <string name="coz4">Torradeira</string>
    <string name="coz5">Geladeira</string>
    <string name="coz6">Microondas</string>
    <string name="coz7">Lâmpada</string>
</resources>