<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuartoDeCasal">

    <Button
        android:id="@+id/btn_qc1"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="160dp"
        android:text="@string/qc1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_qc2"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:text="@string/qc2"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_qc1" />

    <Button
        android:id="@+id/btn_qc3"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:text="@string/qc3"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_qc2" />

    <Button
        android:id="@+id/btn_qc4"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:text="@string/qc4"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_qc3" />

    <Button
        android:id="@+id/btn_qc5"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:text="@string/qc5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_qc4"
        android:textSize="16sp" />
    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="192dp"
        android:layout_height="54dp"
        android:layout_marginBottom="32dp"
        android:src="@drawable/demeiletrasamareloeditado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="215dp"
        android:layout_height="53dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="32dp"
        android:src="@drawable/gaicletrasamareloepretoeditando"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView15" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="177dp"
        android:layout_height="130dp"
        android:src="@drawable/logounijui"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>